--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <h1>SUNIL POWAR</h1>
       <div class="role">Quality Assurance &amp; Security Testing Specialist</div>
       <div class="profile-section">
-  <img src="assets/avatar.png.png" alt="Sunil Powar Avatar" class="avatar" />
+  <img src="avatar.png" alt="Sunil Powar Avatar" class="avatar" />
 </div>
       <div class="contact">
         📞 (726) 666-0715 | ✉️ <a href="mailto:sunilpowar@proton.me">sunilpowar@proton.me</a> | 🔗
