--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
       </ul>
 
       <div class="qr">
-        <img src="G:\work_main\resume-portfolio\assets\qr-code.png" alt="QR code to LinkedIn profile">
+        <img src="qr-code.png" alt="QR code to LinkedIn profile">
         <div>
           <div class="item-head">Scan to view my LinkedIn profile</div>
           <div class="hint">Quick access for recruiters during print or mobile viewing.</div>
