--- a/index.html
+++ b/index.html
@@ -301,11 +301,10 @@
         <li>Proven track record of delivering high-quality results in remote and hybrid work environments</li>
       </ul>
 
-      <div class="qr">
-        <img src="qr-code.png" alt="QR code to LinkedIn profile">
-        <div>
-          <div class="item-head">Scan to view my LinkedIn profile</div>
-          <div class="hint">Quick access for recruiters during print or mobile viewing.</div>
+        <div class="text-center mt-4">
+      <img src="https://api.qrserver.com/v1/create-qr-code/?size=120x120&data=https://linkedin.com/in/skpowar" class="img-fluid rounded" alt="LinkedIn QR">
+      <p class="text-muted small">Scan to view my LinkedIn profile</p>
+    </div>
         </div>
       </div>
     </section>
